--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 body {
   font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   background-color: #fff;
-  height: 200vh;
-  position: relative; }
+  position: relative; 
+}
   body:before {
     content: "";
     position: absolute;
@@ -426,7 +426,7 @@ h5 {
 }
 .team .member .pic {
   overflow: hidden;
-  width: 180px;
+  width: 150px;
   border-radius: 50%;
 }
 .team .member .pic img {
@@ -464,36 +464,6 @@ h5 {
 .team .member p {
   margin: 10px 0 0 0;
   font-size: 14px;
-}
-.team .member .social {
-  margin-top: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.team .member .social a {
-  transition: ease-in-out 0.3s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50px;
-  width: 32px;
-  height: 32px;
-  background: #eff2f8;
-}
-.team .member .social a i {
-  color: #37517e;
-  font-size: 16px;
-  margin: 0 2px;
-}
-.team .member .social a:hover {
-  background: #47b2e4;
-}
-.team .member .social a:hover i {
-  color: #fff;
-}
-.team .member .social a + a {
-  margin-left: 8px;
 }
 
 /*-------------------------------------
@@ -871,6 +841,7 @@ a:focus.service-btn{
 }
 #footer .footer-top .footer-contact p {
   font-size: 14px;
+  padding-left: 15px;
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Jost", sans-serif;
